<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res/com.guozha.buy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_nomal_background_color"
    android:orientation="vertical" >

	<FrameLayout
	    android:id="@+id/fragment_container"
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
	
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/color_app_base_7"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@color/main_bottom_tab_bg_color"
        android:orientation="horizontal">
        <com.guozha.buy.view.TabBarItem
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            hyman:checked_item="true"
            hyman:nomal_icon="@drawable/tab_bar_home_normal"
            hyman:check_icon="@drawable/tab_bar_home_current"
            hyman:text="@string/activity_main_tab1_title"
            hyman:text_size="@dimen/app_nomal_text_size"
            hyman:nomal_color="@color/color_app_base_2"
            hyman:check_color="@color/color_app_base_1"/>
        
        <com.guozha.buy.view.TabBarItem
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            hyman:checked_item="false"
            hyman:nomal_icon="@drawable/tab_bar_market_normal"
            hyman:check_icon="@drawable/tab_bar_market_current"
            hyman:text="@string/activity_main_tab2_title"
            hyman:text_size="@dimen/app_nomal_text_size"
            hyman:nomal_color="@color/color_app_base_2"
            hyman:check_color="@color/color_app_base_1"/>

        <com.guozha.buy.view.TabBarItem
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            hyman:checked_item="false"
            hyman:nomal_icon="@drawable/tab_bar_market_normal"
            hyman:check_icon="@drawable/tab_bar_market_current"
            hyman:text="@string/activity_main_tab3_title"
            hyman:text_size="@dimen/app_nomal_text_size"
            hyman:nomal_color="@color/color_app_base_2"
            hyman:check_color="@color/color_app_base_1"/>

        <com.guozha.buy.view.TabBarItem
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"        
            android:layout_height="fill_parent"
            android:layout_weight="1"
            hyman:checked_item="false"
            hyman:nomal_icon="@drawable/tab_bar_basket_normal"
            hyman:check_icon="@drawable/tab_bar_basket_current"
            hyman:text="@string/activity_main_tab4_title"
            hyman:text_size="@dimen/app_nomal_text_size"
            hyman:nomal_color="@color/color_app_base_2"
            hyman:check_color="@color/color_app_base_1"/>

        <com.guozha.buy.view.TabBarItem
            android:id="@+id/id_indicator_five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            hyman:checked_item="false"
            hyman:nomal_icon="@drawable/tab_bar_personal_normal"
            hyman:check_icon="@drawable/tab_bar_personal_current"
            hyman:text="@string/activity_main_tab5_title"
            hyman:text_size="@dimen/app_nomal_text_size"
            hyman:nomal_color="@color/color_app_base_2"
            hyman:check_color="@color/color_app_base_1"/>
    </LinearLayout>
</LinearLayout>