<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dip"
    android:paddingRight="30dip"
    android:orientation="vertical" >
    
   <!-- 手机号码 -->
   <LinearLayout 
        android:id="@+id/login_phone_input_area"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dip"
        android:background="@drawable/login_regist_nomal_input_background"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
        
	    <EditText
	        android:id="@+id/login_phonenum"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="@null"
	        android:singleLine="true"
	        android:hint="@string/activity_login_phonenum_hint"
	        android:textSize="@dimen/dimen_global_16sp"
	        android:textColor="@color/app_base_text_color"
	        android:textColorHint="@color/app_base_hint_text_color"
	        android:gravity="center_vertical"
	        android:inputType="phone"/>
	    
	     <ImageView
            android:id="@+id/login_phonenum_clear"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:scaleType="centerInside"
            android:visibility="invisible"
            android:src="@drawable/login_wrong_state" />
    </LinearLayout>
    
    <!-- 密码 -->
    <LinearLayout 
        android:id="@+id/login_pwd_input_area"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:background="@drawable/login_regist_nomal_input_background"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
	     
	    <EditText
	        android:id="@+id/login_pwd"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:hint="@string/activity_login_pwd_hint"
	        android:textColorHint="@color/app_base_hint_text_color"
	        android:textColor="@color/app_base_text_color"
	        android:textSize="@dimen/dimen_global_16sp"
	        android:singleLine="true"
	        android:background="@null"
	        android:gravity="center_vertical"
	        android:inputType="textPassword"/>
	    
	     <ImageView
	        android:id="@+id/login_pwd_clear"
	        android:layout_width="24dip"
	        android:layout_height="24dip"
	        android:scaleType="centerInside"
	        android:visibility="invisible"
	        android:src="@drawable/login_wrong_state" />
    </LinearLayout>
    
    <!-- 登录按钮 -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/activity_login_button_text"
        android:textSize="@dimen/dimen_global_18sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dip"
        android:background="@drawable/nomal_button_nomal_bg"
        android:enabled="false"/>
    
    <!-- 引导注册、忘记密码 -->
    <RelativeLayout 
        android:layout_marginTop="20dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/login_toregist_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/app_base_text_color"
            android:textSize="@dimen/dimen_global_14sp"
            android:text="@string/activity_login_remind_regist_text"/>
        <TextView
            android:id="@+id/login_tofindpwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/app_base_text_color"
            android:textSize="@dimen/dimen_global_14sp"
            android:text="@string/activity_login_remind_findpwd_text"/>
    </RelativeLayout>
</LinearLayout>
